@@ -1,6 +1,5 @@
 /* user table holds data managed by Krang::User and accessed by
    Krang::CGI::Login */
-DROP TABLE IF EXISTS usr;
 DROP TABLE IF EXISTS user;
 CREATE TABLE user (
         user_id         INT UNSIGNED NOT NULL AUTO_INCREMENT PRIMARY KEY,
@@ -11,11 +10,15 @@ CREATE TABLE user (
         mobile_phone	VARCHAR(32),
         password        VARCHAR(255) NOT NULL,
         phone		VARCHAR(32),
-        KEY (login)
+        hidden          BOOL NOT NULL DEFAULT 0,
+        KEY (login),
+        INDEX (hidden)
 );
 
 /* default account 'admin', password 'whale' */
 INSERT INTO user (email, login, password, first_name, last_name) VALUES
 ('Joe@Admin.com', 'admin', 'f1a93f635e172bd5be55ae08dd41553a', 'Joe', 'Admin');
 
-DROP TABLE IF EXISTS usr_user_group;
+/* default account 'system', hidden with no password*/
+INSERT INTO user (email, login, password, first_name, last_name, hidden) VALUES
+('system@noemail.com', 'system', '*', 'System', 'User', 1);
